# GrimoireEngine

./: CMakeLists.txt
src/: main.c
src/engine/dices/: dices.c  dices.h
src/engine/traveler/: traveler.c  traveler.h
